kubernetes/apps/unifi/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-web
  labels:
    app: unifi-web
spec:
  selector:
    matchLabels:
      app: unifi-web
  replicas: 1
  template:
    metadata:
      labels:
        app: unifi-web
    spec:
      volumes:
      - name: unifi-config
        nfs:
          path: /mnt/ssd/k8s/unifi/config
          server: 10.10.3.2

      restartPolicy: Always
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      containers:
      - name: unifi-network-application
        image: lscr.io/linuxserver/unifi-network-application:8.6.9
        resources:
          requests:
            cpu: 100m
            memory: 1G
          limits:
            memory: 1G

        ports:
        - containerPort: 8443
          name: unifi-web
        - containerPort: 8080
          name: unifi-ap-comms

        volumeMounts:
        - mountPath: /config
          name: unifi-config

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-db
  labels:
    app: unifi-db
spec:
  selector:
    matchLabels:
      app: unifi-db
  replicas: 1
  template:
    metadata:
      labels:
        app: unifi-db
    spec:
      volumes:
      - name: unifi-db
        nfs:
          path: /mnt/ssd/k8s/unifi/db
          server: 10.10.3.2

      restartPolicy: Always
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      containers:
      - name: mongodb
        image: mongo:7
        securityContext:
          runAsUser: 1000
        resources:
          requests:
            cpu: 100m
            memory: 100M
          limits:
            memory: 500M

        volumeMounts:
        - mountPath: /data/db
          name: unifi-db

---

apiVersion: v1
kind: Service
metadata:
  name: unifi-web
  labels:
    app: unifi-web
spec:
  type: ClusterIP
  ports:
  - name: unifi-web
    port: 8443
    targetPort: 8443
  selector:
    app: unifi-web

---

apiVersion: v1
kind: Service
metadata:
  name: unifi-ap-comms
  labels:
    app: unifi-web
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.10.3.9
spec:
  type: LoadBalancer
  ports:
  - name: unifi-ap-comms
    port: 8080
    targetPort: 8080
  selector:
    app: unifi-web

---

apiVersion: v1
kind: Service
metadata:
  name: unifi-db
  labels:
    app: unifi-db
spec:
  type: ClusterIP
  ports:
  - name: unifi-db
    port: 27017
    targetPort: 27017
  selector:
    app: unifi-db
