kubernetes/apps/unifi/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  ingressClassName: nginx
  rules:
  - host: unifi.greenappleton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi-web
            port:
              name: unifi-web
  tls:
  - hosts:
    - unifi.greenappleton.com
    secretName: unifi.greenappleton.com
